// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilteringOption/> renders without crashing ChartPresenter 1`] = `
<Checkbox
  bsClass="checkbox"
  disabled={false}
  id="create_checkbox"
  inline={false}
  name="date_create_control"
  onChange={[Function]}
  title=""
>
  created in last 
  <input
    className="num_days"
    id="create_input"
    min={0}
    onChange={[Function]}
    step={1}
    type="number"
  />
   days
</Checkbox>
`;

exports[`<FilteringOption/> should be able to change state of woc checkbox 1`] = `
<Checkbox
  bsClass="checkbox"
  checked={true}
  disabled={false}
  id="create_checkbox"
  inline={false}
  name="date_create_control"
  onChange={[Function]}
  title=""
>
  created in last 
  <input
    className="num_days"
    id="create_input"
    min={0}
    onChange={[Function]}
    step={1}
    type="number"
  />
   days
</Checkbox>
`;
